compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__echo_followed_by_no_expression_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2897
expression: "\n  pub fn wibble(a) { a }\n\n  pub fn main() {\n    wibble(echo)\n  }\n"
snapshot_kind: text
---
----- SOURCE CODE

  pub fn wibble(a) { a }

  pub fn main() {
    wibble(echo)
  }


----- ERROR
error: Invalid echo use
  ┌─ /src/one/two.gleam:5:12
  │
5 │     wibble(echo)
  │            ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
